objects/Partner_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links Partner Opportunity record to partner&apos;s client/customer.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <inlineHelpText>Specifies partner&apos;s status with prospective Copado customer.</inlineHelpText>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence_Level__c</fullName>
        <inlineHelpText>Specifies level of influence that partner has on client&apos;s decision to buy Copado.</inlineHelpText>
        <label>Influence Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Influence_Notes__c</fullName>
        <inlineHelpText>Captures notes about how partner&apos;s influence on Copado opportunity.</inlineHelpText>
        <label>Influence Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Captures notes about how partner&apos;s influence on Copado opportunity.</description>
        <inlineHelpText>Captures notes about how partner&apos;s influence on Copado opportunity.</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Level__c</fullName>
        <formula>TEXT( Partner_Account__r.Partner_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Partner Level field value from opportunity partner&apos;s account record.</inlineHelpText>
        <label>Partner Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Owner__c</fullName>
        <formula>Partner_Account__r.Owner.FirstName &amp;&apos; &apos;&amp; Partner_Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays partner Account Owner field value.</inlineHelpText>
        <label>Partner Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Type__c</fullName>
        <formula>TEXT( Partner_Account__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links Partner Opportunity record to partner&apos;s account record.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Opportunity_Number__c</fullName>
        <displayFormat>PON-{00000}</displayFormat>
        <inlineHelpText>Using an auto number field reduces key strokes required to set up record. Record relies on Partner Account lookup field to identify partner.</inlineHelpText>
        <label>Partner Relationship Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partner_Opportunity_Role__c</fullName>
        <inlineHelpText>Specifies role that partner plays in helping Copado close opportunity.</inlineHelpText>
        <label>Partner Relationship Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Lead Source</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links Partner Opportunity record to opportunity record.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the individual contact that referred lead to Copado.</description>
        <inlineHelpText>Displays the individual contact that referred lead to Copado.</inlineHelpText>
        <label>Referee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Status__c</fullName>
        <inlineHelpText>Specifies status of referral.</inlineHelpText>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not introduced</fullName>
                </value>
                <value>
                    <fullName>Introduction pending</fullName>
                </value>
                <value>
                    <fullName>Introduced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Engagement_Status__c</columns>
        <columns>Partner_Opportunity__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_Opportunity_Role__c</columns>
        <columns>Influence_Notes__c</columns>
        <columns>Referee__c</columns>
        <columns>Referral_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ownbackup</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Capgemini_Partner_Relationships</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Engagement_Status__c</columns>
        <columns>Partner_Opportunity__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_Opportunity_Role__c</columns>
        <columns>Influence_Notes__c</columns>
        <columns>Referee__c</columns>
        <columns>Referral_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Account__c</field>
            <operation>contains</operation>
            <value>Capgemini</value>
        </filters>
        <label>Capgemini Partner Relationships</label>
        <sharedTo>
            <role>Director_Alliances</role>
            <role>VP_Alliances</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Relationships_and_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Referral_Status__c</columns>
        <columns>Engagement_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Partner_Opportunity__c</columns>
        <columns>Partner_Account__c</columns>
        <columns>Partner_Account_Type__c</columns>
        <columns>Referee__c</columns>
        <columns>Partner_Opportunity_Role__c</columns>
        <columns>Partner_Account_Level__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Partner_Opportunity_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Partner Relationships and Accounts</label>
        <sharedTo>
            <role>Director_Alliances</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Partner Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>